0.2.0 (2015-xx-xx)
-- optimize memory usage for zhparser
-- support load multi dict
-- export SCWS settings to GUC
-- make context of dict_in_memory and extra_dicts to backend,others to userset
-- fix a bug of unknow type index out of range
-- detect dict file type from file extension

0.1.4 (2013-11-03)
-- fix pgxn meta

0.1.3 （2013-11-03）
-- resolve the compile warning for pstrdup
-- add the Chinese dict for SCWS
-- fix rpath flag which emmit error on Mac OS
-- update instal doc to note use gmake for *BSD
-- update install doc to download SCWS from git url 

0.1.2 （2013-10-23）
-- resolve the pstrdup name conflict for pg 9.3

0.1.1 (2013-02-05)
-- add CHANGELOG
-- fmt the doc

0.1.0 (2013-02-04)
-- init release in pgxn
-- parse Chinese encode in UTF-8